--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.wiperdog</groupId>
-  <artifactId>org.wiperdog.pom</artifactId>
+  <artifactId>wiperdog</artifactId>
   <version>0.1.0</version>
 
   <name>${bundle.symbolicName}</name>
@@ -15,11 +15,46 @@
   <packaging>pom</packaging>
 
   <modules>
-    <module>parent</module>
     <module>org.wiperdog.configloader</module>
     <module>org.wiperdog.directorywatcher</module>
     <module>org.wiperdog.jobmanager</module>
     <module>org.wiperdog.rshell.api</module>
     <module>org.wiperdog.scriptsupport.groovyrunner</module>
   </modules>
+
+  <build>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+        <artifactId>wagon-webdav</artifactId>
+      </extension>
+    </extensions>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+          <encoding>UTF-8</encoding>
+          <compilerArgument>-Xlint:all</compilerArgument>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <locales>ja</locales>
+          <outputEncoding>UTF-8</outputEncoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
