Update distribution (distrib folder) for task #300

--- a/etc/config.properties
+++ b/etc/config.properties
@@ -86,14 +86,7 @@ felix.auto.start.1=\
 	"file:${felix.home}/lib/java/bundle/org.apache.felix.fileinstall-3.0.2.jar" \
 	"file:${felix.home}/lib/java/bundle/pax-logging-api-1.6.3.jar" \
 	"file:${felix.home}/lib/java/bundle/pax-logging-service-1.6.3.jar" \
-
-# felix.auto.start.2=\
-#	"file:${felix.home}/lib/java/bundle/com.insight_tec.pi.framework-3.1.0.jar" \
-
-felix.auto.install.3=\
-	"file:${felix.home}/lib/java/bundle/com.insight_tec.pi.http.httpservice-3.1.0.jar"
-
-# felix.auto.start.4=\
+	"file:${felix.home}/lib/java/bundle/groovy-all-1.7.2.jar" \
 
 felix.log.level=1
 
@@ -126,3 +119,14 @@ felix.fileinstall.poll=2000
 felix.fileinstall.tmpdir=${felix.home}/tmp
 
 #obr.repository.url=http://felix.apache.org/obr/releases.xml
+
+# Directory which has jar for Wrap
+felix.wrapjarinstall.dir=${felix.home}/lib/java/bundle.wrap
+
+felix.wrapjarinstall.firststart=\
+	"file:${felix.home}/lib/java/bundle.wrap/json-lib-2.3-jdk15.jar" \
+	"file:${felix.home}/lib/java/bundle.wrap/mongo-java-driver-2.9.0.jar" \
+	"file:${felix.home}/lib/java/bundle.wrap/xml-resolver-1.2.jar" \
+	"file:${felix.home}/lib/java/bundle.wrap/httpcore-4.1.jar" \
+
+felix.wrapjarinstall.action=install,start
