--- a/etc/groovy-starter.conf
+++ b/etc/groovy-starter.conf
@@ -22,9 +22,9 @@
     # tools.jar for ant tasks
     load ${tools.jar}
 
-    load !{groovy.home}/lib/java/bundle.d/com.insight_tec.pi.scriptsupport.groovyrunner-3.1.0.jar
-    load !{groovy.home}/lib/java/bundle.d/com.insight_tec.pi.jobmanager-3.0.0.jar
-    # load !{groovy.home}/lib/java/bundle.a/com.insight_tec.pi.oracle.ojdbc5-3.0.0.jar
+    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.scriptsupport.groovyrunner-3.1.0.jar
+    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.jobmanager-3.0.0.jar
+    # load !{groovy.home}/lib/java/bundle.a/org.wiperdog.oracle.ojdbc5-3.0.0.jar
     # load !{groovy.home}/lib/java/bundle.a/http-builder-0.5.2.jar
 	# load !{groovy.home}/lib/java/bundle.a/commons-logging-1.1.1.jar
 	# load !{groovy.home}/lib/java/bundle.a/json-lib-2.3-jdk15.jar
@@ -34,7 +34,7 @@
 	# load !{groovy.home}/lib/java/bundle.a/commons-collections-3.2.1.jar
     load !{groovy.home}/lib/java/commons-logging-1.1.jar
     load !{groovy.home}/lib/java/bundle.a/*.jar
-    load !{groovy.home}/lib/java/bundle.d/com.insight_tec.pi.scriptsupport.groovyrunner-3.1.0.jar
+    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.scriptsupport.groovyrunner-3.1.0.jar
     load !{groovy.home}/lib/java/bundle.d/json-lib-2.3.jar
     load !{groovy.home}/lib/java/bundle.d/org.codehaus.groovy.modules.http-builder-0.5.2.jar
 
