1. changed config.properties to use newer version(2.2.x) of groovy. 2. changed dependency(pom.xml) to use newer version of groovy, quartz-scheduler. 3. changed version (0.1.0 -> 0.1.1-SNAPSHOT) of org.wiperdog.jobmanager, org.wiperdog.scriptsupport.groovyrunner.

--- a/etc/config.properties
+++ b/etc/config.properties
@@ -86,7 +86,7 @@ felix.auto.start.1=\
 	"file:${felix.home}/lib/java/bundle/org.apache.felix.fileinstall-3.0.2.jar" \
 	"file:${felix.home}/lib/java/bundle/pax-logging-api-1.6.3.jar" \
 	"file:${felix.home}/lib/java/bundle/pax-logging-service-1.6.3.jar" \
-	"file:${felix.home}/lib/java/bundle/groovy-all-1.7.2.jar" \
+	"file:${felix.home}/lib/java/bundle/groovy-all-2.2.0-beta-1.jar" \
 
 felix.log.level=1
 
