--- a/pom.xml
+++ b/pom.xml
@@ -368,10 +368,19 @@
         <version>2.4</version>
         <configuration>
           <descriptors>
-            <descriptor>src/assemble/distrib-unix.xml</descriptor>
-            <descriptor>src/assemble/distrib-win.xml</descriptor>
+            <descriptor>src/main/assemble/distrib-unix.xml</descriptor>
+            <descriptor>src/main/assemble/distrib-win.xml</descriptor>
           </descriptors>
         </configuration>
+        <executions>
+          <execution>
+            <id>assemble</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
