--- a/etc/groovy-starter.conf
+++ b/etc/groovy-starter.conf
@@ -22,19 +22,8 @@
     # tools.jar for ant tasks
     load ${tools.jar}
 
-    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.scriptsupport.groovyrunner-3.1.0.jar
-    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.jobmanager-3.0.0.jar
-    # load !{groovy.home}/lib/java/bundle.a/org.wiperdog.oracle.ojdbc5-3.0.0.jar
-    # load !{groovy.home}/lib/java/bundle.a/http-builder-0.5.2.jar
-	# load !{groovy.home}/lib/java/bundle.a/commons-logging-1.1.1.jar
-	# load !{groovy.home}/lib/java/bundle.a/json-lib-2.3-jdk15.jar
-	# load !{groovy.home}/lib/java/bundle.a/xml-resolver-1.2.jar
-	# load !{groovy.home}/lib/java/bundle.a/commons-lang-2.4.jar
-	# load !{groovy.home}/lib/java/bundle.a/ezmorph-1.0.6.jar
-	# load !{groovy.home}/lib/java/bundle.a/commons-collections-3.2.1.jar
-    load !{groovy.home}/lib/java/commons-logging-1.1.jar
+    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.jobmanager-*.jar
     load !{groovy.home}/lib/java/bundle.a/*.jar
-    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.scriptsupport.groovyrunner-3.1.0.jar
-    load !{groovy.home}/lib/java/bundle.d/json-lib-2.3.jar
-    load !{groovy.home}/lib/java/bundle.d/org.codehaus.groovy.modules.http-builder-0.5.2.jar
+    load !{groovy.home}/lib/java/bundle.d/json-lib-*.jar
+    load !{groovy.home}/lib/java/bundle.d/org.codehaus.groovy.modules.http-builder-*.jar
 
