1. removed redundant hint definition from job. 2. removed unused log definitions from org.ops4j.pax.logging.cfg.

--- a/etc/org.ops4j.pax.logging.cfg
+++ b/etc/org.ops4j.pax.logging.cfg
@@ -1,53 +1,12 @@
 #default layout:
 #log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-
-##log4j.logger.org.springframework.osgi=DEBUG
-##log4j.logger.org.springframework=INFO
-##log4j.logger.org.apache.wicket=INFO
-##log4j.logger.org.mortbay=INFO
-##
-##log4j.logger.org.apache.wicket.util.thread=INFO
-##log4j.logger.org.compass.core.lucene.engine.optimizer.ScheduledLuceneSearchEngineOptimizer=INFO
-##log4j.logger.org.springframework.osgi.extender.internal.support.NamespaceManager=INFO
-##log4j.logger.org.springframework.osgi.extender.internal.support.NamespacePlugins=INFO
-
-# FIXME: hiding the warnings:
-# | INFO: org.apache.cxf.transport.servlet.AbstractCXFServlet: LOAD_BUS_WITHOUT_APPLICATION_CONTEXT
-# | WARN: org.apache.cxf.bus.spring.SpringBusFactory: Initial attempt to create application context was unsuccessful.
-# | Caused by: java.io.FileNotFoundException: class path resource [META-INF/cxf/cxf.xml] cannot be opened because it does not exist
-log4j.logger.org.apache.cxf.bus.spring.SpringBusFactory=ERROR
-
-# disable extra verbose informations
-log4j.logger.org.apache.cxf.bus.spring.BusApplicationContext=WARN
-log4j.logger.org.apache.cxf.bus.spring.ControlledValidationXmlBeanDefinitionReader=WARN
-log4j.logger.org.springframework.beans.factory.support.DefaultListableBeanFactory=WARN
-log4j.logger.org.apache.sshd.common.util.SecurityUtils=WARN
-log4j.logger.org.apache.sshd.common.util.OsUtils=WARN
-log4j.logger.org.apache.sshd.server.session.ServerSession=WARN
-log4j.logger.org.apache.sshd.server.keyprovider.SimpleGeneratorHostKeyProvider=WARN
-log4j.logger.org.apache.sshd.server.keyprovider.PEMGeneratorHostKeyProvider=WARN
-log4j.logger.org.apache.sshd.server.PasswordAuthenticator=WARN
-log4j.logger.org.apache.sshd.server.PublickeyAuthenticator=WARN
-log4j.logger.org.apache.sshd.server.kex.DHG1=WARN
-log4j.logger.org.apache.sshd.server.session.TcpipForwardSupport$ChannelForwardedTcpip=WARN
-log4j.logger.org.apache.sshd.common.keyprovider.FileKeyPairProvider=WARN
-log4j.logger.org.apache.sshd.server.channel.ChannelSession=WARN
 log4j.logger.org.eclipse.jetty.util.log=ERROR
-log4j.logger.org.apache.cxf.phase.PhaseInterceptorChain=ERROR
 
-#
-# logger for policy
-# 
-#log4j.logger.POLICY=DEBUG
-log4j.logger.POLICY_TRACE=DEBUG
 # 
 # logger for other bundles
 #
 
-log4j.logger.com.insight_tec.pi.report.job.CreateReportJob=DEBUG
-log4j.logger.com.insight_tec.pi.report.ReportGenerator=DEBUG
-log4j.logger.com.insight_tec.pi.report.job.EvaluateResultJob=DEBUG
-log4j.logger.com.insight_tec.pi.threshold.calculation.job.ThresholdCalcJob=DEBUG
+# log4j.logger.org.wiperdog.scriptsupport=TRACE
 
 #log4j.rootLogger=INFO, file
 log4j.rootLogger=DEBUG, file
