--- a/etc/monitorjobfw.cfg
+++ b/etc/monitorjobfw.cfg
@@ -7,6 +7,7 @@ monitorjobfw.directory.dbpasswordfile=${felix.home}/var/conf
 monitorjobfw.directory.systempropertiesfile=${felix.home}/etc
 monitorjobfw.directory.groovyfile=${felix.home}/lib/groovy
 monitorjobfw.directory.monitorswap=${felix.home}/var/swap/monitorjob
+monitorjobfw.directory.log=${felix.home}/log
 monitorjobfw.max.number.swapfile=1024
 monitorjobfw.directory.swap.maxsize.mb=10
 monitorjobfw.sleep.time.millisecond=5000
