--- a/pom.xml
+++ b/pom.xml
@@ -347,7 +347,7 @@
     <dependency>
     	<groupId>org.wiperdog</groupId>
     	<artifactId>org.wiperdog.jobmanager</artifactId>
-    	<version>0.2.0</version>
+    	<version>0.2.1-SNAPSHOT</version>
     </dependency>
     <dependency>
     	<groupId>org.wiperdog</groupId>
