Commit for release version 0.1.0

--- a/etc/config.properties
+++ b/etc/config.properties
@@ -81,13 +81,15 @@ felix.auto.deploy.dir=${felix.home}/lib/java/bundle.a
 # may be specified for different start levels.
 #felix.auto.start.1=
 felix.auto.start.1=\
-	"file:${felix.home}/lib/java/bundle/org.osgi.compendium-1.4.0.jar" \
-	"file:${felix.home}/lib/java/bundle/org.apache.felix.configadmin-1.2.8.jar" \
-	"file:${felix.home}/lib/java/bundle/org.apache.felix.fileinstall-3.0.2.jar" \
-	"file:${felix.home}/lib/java/bundle/pax-logging-api-1.6.3.jar" \
-	"file:${felix.home}/lib/java/bundle/pax-logging-service-1.6.3.jar" \
-	"file:${felix.home}/lib/java/bundle/groovy-all-2.2.0-beta-2.jar" \
+	"file:${felix.home}/lib/java/bundle/quartz-2.2.0.jar" \
+	"file:${felix.home}/lib/java/bundle/org.wiperdog.rshell.api-0.1.0.jar" \
+	"file:${felix.home}/lib/java/bundle/org.wiperdog.configloader-0.1.0.jar" \
+	"file:${felix.home}/lib/java/bundle/org.wiperdog.directorywatcher-0.1.0.jar" \
+	"file:${felix.home}/lib/java/bundle/groovy-all-2.2.0-beta-1.jar" \
+	"file:${felix.home}/lib/java/bundle/org.wiperdog.scriptsupport.groovyrunner-0.2.0.jar" \
+	"file:${felix.home}/lib/java/bundle/org.wiperdog.jobmanager-0.2.0.jar"
 
+#log level
 felix.log.level=1
 
 # Sets the initial start level of the framework upon startup.
@@ -111,12 +113,6 @@ felix.startlevel.bundle=3
 #
 #felix.cm.dir=${felix.home}/etc/config
 
-felix.fileinstall.dir=${felix.home}/etc
-felix.fileinstall.filter=.*\\.cfg
-felix.fileinstall.log.level=0
-felix.fileinstall.noInitialDelay=true
-felix.fileinstall.poll=2000
-felix.fileinstall.tmpdir=${felix.home}/tmp
 
 #obr.repository.url=http://felix.apache.org/obr/releases.xml
 
