--- a/etc/config.properties
+++ b/etc/config.properties
@@ -81,6 +81,7 @@ felix.auto.deploy.dir=${felix.home}/lib/java/bundle.a
 # may be specified for different start levels.
 #felix.auto.start.1=
 felix.auto.start.1=\
+	"file:${felix.home}/lib/java/bundle/org.apache.felix.fileinstall-3.0.2.jar" \
 	"file:${felix.home}/lib/java/bundle/quartz-2.2.0.jar" \
 	"file:${felix.home}/lib/java/bundle/org.wiperdog.rshell.api-0.1.0.jar" \
 	"file:${felix.home}/lib/java/bundle/org.wiperdog.configloader-0.1.0.jar" \
@@ -112,7 +113,12 @@ felix.startlevel.bundle=3
 # Bundle config properties.
 #
 #felix.cm.dir=${felix.home}/etc/config
-
+felix.fileinstall.dir=${felix.home}/etc
+felix.fileinstall.filter=.*\\.cfg
+felix.fileinstall.log.level=0
+felix.fileinstall.noInitialDelay=true
+felix.fileinstall.poll=2000
+felix.fileinstall.tmpdir=${felix.home}/tmp
 
 #obr.repository.url=http://felix.apache.org/obr/releases.xml
 
