--- a/etc/org.ops4j.pax.logging.cfg
+++ b/etc/org.ops4j.pax.logging.cfg
@@ -17,8 +17,8 @@ log4j.rootLogger=DEBUG, file
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.DatePattern='.'yyyyMMdd
-#log4j.appender.file.file=${felix.home}/var/log/piexcore.log
-log4j.appender.file.file=${felix.home}/log/piexcore.log
+
+log4j.appender.file.file=${felix.home}/log/wiperdog.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 #log4j.appender.file.layout.ConversionPattern=[%d{yyyy/MM/dd HH:mm:ss.SSS}] %5p [%t] %c: %m%n
 log4j.appender.file.layout.ConversionPattern=%-5p [%d{yyyy/MM/dd HH:mm:ss.SSS}] [%t] %c: %m%n
