Reset groovy home

--- a/etc/groovy-starter.conf
+++ b/etc/groovy-starter.conf
@@ -22,8 +22,5 @@
     # tools.jar for ant tasks
     load ${tools.jar}
 
-    load !{groovy.home}/lib/java/bundle.d/org.wiperdog.jobmanager-*.jar
+    load !{groovy.home}/lib/java/bundle/org.wiperdog.jobmanager-*.jar
     load !{groovy.home}/lib/java/bundle.a/*.jar
-    load !{groovy.home}/lib/java/bundle.d/json-lib-*.jar
-    load !{groovy.home}/lib/java/bundle.d/org.codehaus.groovy.modules.http-builder-*.jar
-
