Update source for java 7
Wiperdog will be OK with java version from 1.6.0_30

--- a/etc/config.properties
+++ b/etc/config.properties
@@ -29,7 +29,7 @@
 
 # The following property makes specified packages from the class path
 # available to all bundles. You should avoid using this property.
-#org.osgi.framework.bootdelegation=sun.*,com.sun.*
+org.osgi.framework.bootdelegation=sun.*,com.sun.*
 #org.osgi.framework.bootdelegation=org.netbeans.lib.profiler.server,org.netbeans.lib.profiler.server.*
 
 # Felix tries to guess when to implicitly boot delegate in certain
@@ -86,7 +86,7 @@ felix.auto.start.1=\
 	"file:${felix.home}/lib/java/bundle/org.wiperdog.configloader-0.1.0.jar" \
 	"file:${felix.home}/lib/java/bundle/org.wiperdog.directorywatcher-0.1.0.jar" \
 	"file:${felix.home}/lib/java/bundle/org.wiperdog.scriptsupport.groovyrunner-0.2.0.jar" \
-	"file:${felix.home}/lib/java/bundle/org.wiperdog.jobmanager-0.2.0.jar"
+	"file:${felix.home}/lib/java/bundle/org.wiperdog.jobmanager-0.2.1.jar"
 
 #log level
 felix.log.level=1
