--- a/etc/config.properties
+++ b/etc/config.properties
@@ -29,7 +29,7 @@
 
 # The following property makes specified packages from the class path
 # available to all bundles. You should avoid using this property.
-#org.osgi.framework.bootdelegation=sun.*,com.sun.*
+org.osgi.framework.bootdelegation=sun.*,com.sun.*
 #org.osgi.framework.bootdelegation=org.netbeans.lib.profiler.server,org.netbeans.lib.profiler.server.*
 
 # Felix tries to guess when to implicitly boot delegate in certain
