Update start Wiperdog by list bundle
Bundle with runlevel will list in bin/ListBundle.csv

--- a/etc/config.properties
+++ b/etc/config.properties
@@ -62,12 +62,11 @@ org.osgi.framework.storage.clean=onFirstInit
 # the following values: 'install', 'start', 'update', and 'uninstall'.
 # An undefined or blank value is equivalent to disabling auto-deploy
 # processing.
-felix.auto.deploy.action=install,start
+#felix.auto.deploy.action=install,start
 
 # The following property specifies the directory to use as the bundle
 # auto-deploy directory; the default is 'bundle' in the working directory.
 #felix.auto.deploy.dir=bundle
-felix.auto.deploy.dir=${felix.home}/lib/java/bundle.a
 
 # The following property is a space-delimited list of bundle URLs
 # to install when the framework starts. The ending numerical component
@@ -80,24 +79,15 @@ felix.auto.deploy.dir=${felix.home}/lib/java/bundle.a
 # component is the target start level. Any number of these properties
 # may be specified for different start levels.
 #felix.auto.start.1=
-felix.auto.start.1=\
-	"file:${felix.home}/lib/java/bundle/quartz-2.2.0.jar" \
-	"file:${felix.home}/lib/java/bundle/org.wiperdog.rshell.api-0.1.0.jar" \
-	"file:${felix.home}/lib/java/bundle/org.wiperdog.configloader-0.1.0.jar" \
-	"file:${felix.home}/lib/java/bundle/org.wiperdog.directorywatcher-0.1.0.jar" \
-	"file:${felix.home}/lib/java/bundle/org.wiperdog.scriptsupport.groovyrunner-0.2.0.jar" \
-	"file:${felix.home}/lib/java/bundle/org.wiperdog.jobmanager-0.2.1.jar"
 
 #log level
 felix.log.level=1
 
 # Sets the initial start level of the framework upon startup.
 #org.osgi.framework.startlevel.beginning=1
-org.osgi.framework.startlevel.beginning=5
 
 # Sets the start level of newly installed bundles.
 #felix.startlevel.bundle=1
-felix.startlevel.bundle=3
 
 # Felix installs a stream and content handler factories by default,
 # uncomment the following line to not install them.
@@ -119,14 +109,3 @@ felix.fileinstall.poll=2000
 felix.fileinstall.tmpdir=${felix.home}/tmp
 
 #obr.repository.url=http://felix.apache.org/obr/releases.xml
-
-# Directory which has jar for Wrap
-felix.wrapjarinstall.dir=${felix.home}/lib/java/bundle.wrap
-
-felix.wrapjarinstall.firststart=\
-	"file:${felix.home}/lib/java/bundle.wrap/json-lib-2.3-jdk15.jar" \
-	"file:${felix.home}/lib/java/bundle.wrap/mongo-java-driver-2.9.0.jar" \
-	"file:${felix.home}/lib/java/bundle.wrap/xml-resolver-1.2.jar" \
-	"file:${felix.home}/lib/java/bundle.wrap/httpcore-4.1.jar" \
-
-felix.wrapjarinstall.action=install,start
