Send alert mail

--- a/etc/monitorjobfw.cfg
+++ b/etc/monitorjobfw.cfg
@@ -14,3 +14,10 @@ monitorjobfw.sleep.time.millisecond=5000
 monitorjobfw.mongodb.host=127.0.0.1
 monitorjobfw.mongodb.port=27017
 monitorjobfw.mongodb.dbName=wiperdog
+monitorjobfw.mail.fromMail=testmail@gmail.com
+monitorjobfw.mail.fromPassWd=testpassword
+monitorjobfw.mail.fromMailHost=smtp.gmail.com
+monitorjobfw.mail.fromMailPort=465
+monitorjobfw.mail.toMail=testmail@gmail.com
+monitorjobfw.mail.intervalGetData=1
+monitorjobfw.mail.intervalRunSender=1
