--- a/pom.xml
+++ b/pom.xml
@@ -359,6 +359,11 @@
     	<artifactId>org.wiperdog.scriptsupport.groovyrunner</artifactId>
     	<version>0.2.0</version>
     </dependency>
+    <dependency>
+    	<groupId>javax.mail</groupId>
+    	<artifactId>mail</artifactId>
+    	<version>1.4.7</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
