--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy</artifactId>
-        <version>2.2.0-beta-2</version>
+        <version>2.2.0-rc-1</version>
     </dependency>
     <dependency>
         <groupId>org.apache.felix</groupId>
