#325: Edit MongoDB connect Process

--- a/etc/monitorjobfw.cfg
+++ b/etc/monitorjobfw.cfg
@@ -14,6 +14,9 @@ monitorjobfw.sleep.time.millisecond=5000
 monitorjobfw.mongodb.host=127.0.0.1
 monitorjobfw.mongodb.port=27017
 monitorjobfw.mongodb.dbName=wiperdog
+monitorjobfw.mongodb.user=
+monitorjobfw.mongodb.pass=
+monitorjobfw.mongodb.pass.config=${felix.home}/etc/mongodbpass.cfg
 monitorjobfw.mail.fromMail=testmail@gmail.com
 monitorjobfw.mail.fromPassWd=testpassword
 monitorjobfw.mail.fromMailHost=smtp.gmail.com
