--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.wiperdog</groupId>
   <artifactId>wiperdog-assembly</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.2.0</version>
 
   <packaging>jar</packaging>
   <name>wiperdog-assembly</name>
@@ -29,6 +29,7 @@
     <url>scm:git:https://github.com/wiperdog/org.wiperdog.wiperdog.git</url>
     <connection>scm:git:https://github.com/wiperdog/org.wiperdog.wiperdog.git</connection>
     <developerConnection>scm:git:https://github.com/wiperdog/org.wiperdog.wiperdog.git</developerConnection>
+    <tag>v0.2.0</tag>
   </scm>
 
   <dependencies>
