--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy</artifactId>
-        <version>2.2.0-rc-1</version>
+        <version>2.2.0-rc-2</version>
     </dependency>
     <dependency>
         <groupId>org.apache.felix</groupId>
@@ -394,7 +394,7 @@
           </execution>
         </executions>
       </plugin>
-      <!-- The following plugin setting is for fixing Groovy snapshot release -->
+      <!-- The following plugin setting is for fixing Groovy snapshot release
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
@@ -405,6 +405,8 @@
         </versions>
         </configuration>
       </plugin>
+      ... that didn't work...
+           -->
     </plugins>
   </build>
 </project>
