For MongoDB connect: encrypt and decrypt password
#329

--- a/etc/mongodbpass.cfg
+++ b/etc/mongodbpass.cfg
@@ -1,1 +1,2 @@
-10.0.0.184:27017/wiperdog_test,test,insight
+10.0.0.184:27017/wiperdog_test,test,M8i7LQYGYsDS+2piGyl/sqIXXcj2I40RMzdj/KAHKKI=
+127.0.0.1:27017/wiperdog,,
