--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     </dependency>
     <dependency>
         <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy</artifactId>
+        <artifactId>groovy-all</artifactId>
         <version>2.2.1</version>
     </dependency>
     <dependency>
