update listbundle function by using pax url mvn

--- a/etc/system.properties
+++ b/etc/system.properties
@@ -9,3 +9,6 @@ org.apache.cxf.Logger=org.apache.cxf.common.logging.Slf4jLogger
 org.ops4j.pax.logging.DefaultServiceLog.level=ERROR
 org.terracotta.quartz.skipUpdateCheck=true
 user.home=${felix.home}
+org.ops4j.pax.url.mvn.settings=${user.home}/.m2/settings.xml
+org.ops4j.pax.url.mvn.localRepository=${user.home}/.m2/repository
+org.ops4j.pax.url.mvn.repositories= http://repo1.maven.org/maven2
