--- a/pom.xml
+++ b/pom.xml
@@ -31,17 +31,11 @@
     <developerConnection>scm:git:https://github.com/wiperdog/org.wiperdog.wiperdog.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-
   <dependencies>
     <dependency>
         <groupId>org.apache.felix</groupId>
-        <artifactId>org.osgi.compendium</artifactId>
-        <version>1.4.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.quartz-scheduler</groupId>
-    	<artifactId>quartz</artifactId>
-    	<version>2.2.0</version>
+        <artifactId>org.apache.felix.framework</artifactId>
+        <version>4.2.1</version>
     </dependency>
     <dependency>
         <groupId>org.codehaus.groovy</groupId>
@@ -49,321 +43,9 @@
         <version>2.2.1</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.configadmin</artifactId>
-        <version>1.2.8</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.fileinstall</artifactId>
-        <version>3.0.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.pax.logging</groupId>
-        <artifactId>pax-logging-api</artifactId>
-        <version>1.6.3</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.pax.logging</groupId>
-        <artifactId>pax-logging-service</artifactId>
-        <version>1.6.3</version>
-    </dependency>
-    <dependency>
-        <groupId>biz.aQute.bnd</groupId>
-        <artifactId>bndlib</artifactId>
-        <version>2.1.0</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>1.4</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-collections</groupId>
-        <artifactId>commons-collections</artifactId>
-        <version>3.2.1</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-digester</groupId>
-        <artifactId>commons-digester</artifactId>
-        <version>2.0</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>2.2</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.5</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-net</groupId>
-        <artifactId>commons-net</artifactId>
-        <version>3.1</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-servlet_2.5_spec</artifactId>
-        <version>1.2</version>
-    </dependency>
-    <dependency>
-        <groupId>commons-beanutils</groupId>
-        <artifactId>commons-beanutils</artifactId>
-        <version>1.8.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-core-asl</artifactId>
-        <version>1.9.5</version>
-    </dependency>
-    <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-mapper-asl</artifactId>
-        <version>1.9.5</version>
-    </dependency>
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.20</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.base</groupId>
-        <artifactId>ops4j-base-lang</artifactId>
-        <version>1.4.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.base</groupId>
-        <artifactId>ops4j-base-monitors</artifactId>
-        <version>1.4.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.base</groupId>
-        <artifactId>ops4j-base-net</artifactId>
-        <version>1.4.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.base</groupId>
-        <artifactId>ops4j-base-util-property</artifactId>
-        <version>1.4.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.http.api</artifactId>
-        <version>2.0.4</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.http.base</artifactId>
-        <version>2.0.4</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.http.whiteboard</artifactId>
-        <version>2.0.4</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.shell</artifactId>
-        <version>1.4.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.shell.tui</artifactId>
-        <version>1.4.1</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.equinox.http</groupId>
-        <artifactId>servlet</artifactId>
-        <version>1.0.0-v20070606</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-client</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-continuation</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-deploy</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-http</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-io</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-security</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-server</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-servlet</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-util</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-webapp</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-xml</artifactId>
-        <version>7.6.8.v20121106</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.pax.swissbox</groupId>
-        <artifactId>pax-swissbox-bnd</artifactId>
-        <version>1.7.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.pax.swissbox</groupId>
-        <artifactId>pax-swissbox-property</artifactId>
-        <version>1.7.0</version>
-    </dependency>
-    <dependency>
         <groupId>org.ops4j.pax.url</groupId>
-        <artifactId>pax-url-commons</artifactId>
-        <version>1.6.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ops4j.pax.url</groupId>
-        <artifactId>pax-url-wrap</artifactId>
-        <version>1.6.0</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>c3p0</groupId>
-        <artifactId>c3p0</artifactId>
-        <version>0.9.1.2</version>
-    </dependency>
-    <dependency>
-        <groupId>net.sf.json-lib</groupId>
-        <artifactId>json-lib</artifactId>
-        <version>2.3</version>
-        <classifier>jdk15</classifier>
-    </dependency>
-    <dependency>
-        <groupId>net.sf.ezmorph</groupId>
-        <artifactId>ezmorph</artifactId>
-        <version>1.0.6</version>
-    </dependency>
-    <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongo-java-driver</artifactId>
-        <version>2.9.0</version>
-    </dependency>
-    <dependency>
-        <groupId>com.gmongo</groupId>
-        <artifactId>gmongo</artifactId>
-        <version>1.0</version>
-    </dependency>
-    <!-- This artifact is not tested at all(alternative to ojdbc5.jar)
-    <dependency>
-        <groupId>com.github.ferstl</groupId>
-        <artifactId>spring-jdbc-oracle-ojdbc</artifactId>
-        <version>0.9.0</version>
-    </dependency>
-    -->
-    <dependency>
-        <groupId>com.google.code.gson</groupId>
-        <artifactId>gson</artifactId>
-        <version>2.2.2</version>
-    </dependency>
-    <dependency>
-        <groupId>postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <version>9.1-901-1.jdbc4</version>
-    </dependency>
-    <dependency>
-        <groupId>org.codehaus.groovy.modules.http-builder</groupId>
-        <artifactId>http-builder</artifactId>
-        <version>0.5.2</version>
-    </dependency>
-    
-    <!-- This artifact is not tested at all(alternative to sqljdbc4.jar)
-    <dependency>
-    	<groupId>net.sourceforge.jtds</groupId>
-    	<artifactId>jtds</artifactId>
-    	<version>1.3.0</version>
-    </dependency>
-    -->
-    <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>4.1</version>
-    </dependency>
-    <dependency>
-        <groupId>xml-resolver</groupId>
-        <artifactId>xml-resolver</artifactId>
-        <version>1.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpcore</artifactId>
-        <version>4.1</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpcore</artifactId>
-        <version>4.1</version>
-    </dependency> 
-    <dependency>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>org.apache.felix.framework</artifactId>
-        <version>4.2.1</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.wiperdog</groupId>
-    	<artifactId>org.wiperdog.configloader</artifactId>
-    	<version>0.1.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.wiperdog</groupId>
-    	<artifactId>org.wiperdog.rshell.api</artifactId>
-    	<version>0.1.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.wiperdog</groupId>
-    	<artifactId>org.wiperdog.jobmanager</artifactId>
-    	<version>0.2.1</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.wiperdog</groupId>
-    	<artifactId>org.wiperdog.directorywatcher</artifactId>
-    	<version>0.1.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.wiperdog</groupId>
-    	<artifactId>org.wiperdog.scriptsupport.groovyrunner</artifactId>
-    	<version>0.2.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>javax.mail</groupId>
-    	<artifactId>mail</artifactId>
-    	<version>1.4.7</version>
+        <artifactId>pax-url-mvn</artifactId>
+        <version>1.3.7</version>
     </dependency>
   </dependencies>
   <build>
