replace jetty by netty

--- a/etc/system.properties
+++ b/etc/system.properties
@@ -1,9 +1,7 @@
 bundles.configuration.location=${felix.home}/etc
 felix.config.properties=file:${felix.home}/etc/config.properties
 java.io.tmpdir=${felix.home}/tmp
-jetty.home=${felix.home}/opt/jetty
-jetty.host=0.0.0.0
-jetty.port=13111
+netty.port=13111
 jna.library.path=${felix.home}/lib
 org.apache.cxf.Logger=org.apache.cxf.common.logging.Slf4jLogger
 org.ops4j.pax.logging.DefaultServiceLog.level=ERROR
