--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
         <artifactId>pax-url-mvn</artifactId>
         <version>1.3.7</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.ivy</groupId>
+        <artifactId>ivy</artifactId>
+        <version>2.4.0-rc1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
