update for multi dbtype

--- a/etc/monitorjobfw.cfg
+++ b/etc/monitorjobfw.cfg
@@ -21,6 +21,7 @@ monitorjobfw.mongodb.dbName=wiperdog
 monitorjobfw.mongodb.user=
 monitorjobfw.mongodb.pass=
 monitorjobfw.mongodb.pass.config=${felix.home}/etc/mongodbpass.cfg
+monitorjobfw.dbms.information.config=${felix.home}/etc/dbms_info.cfg
 monitorjobfw.mail.fromMail=testmail@gmail.com
 monitorjobfw.mail.fromPassWd=testpassword
 monitorjobfw.mail.fromMailHost=smtp.gmail.com
