Update installing input params  to default.params

--- a/etc/system.properties
+++ b/etc/system.properties
@@ -2,6 +2,7 @@ bundles.configuration.location=${felix.home}/etc
 felix.config.properties=file:${felix.home}/etc/config.properties
 java.io.tmpdir=${felix.home}/tmp
 netty.port=13111
+rest.port=8089
 jna.library.path=${felix.home}/lib
 org.apache.cxf.Logger=org.apache.cxf.common.logging.Slf4jLogger
 org.ops4j.pax.logging.DefaultServiceLog.level=ERROR
