--- a/etc/config.properties
+++ b/etc/config.properties
@@ -55,7 +55,7 @@ felix.cache.rootdir=${felix.home}
 # the first time the framework is initialized. Possible values are
 # "none" and "onFirstInit"; the default is "none".
 #org.osgi.framework.storage.clean=onFirstInit
-org.osgi.framework.storage.clean=onFirstInit
+org.osgi.framework.storage.clean=none
 
 # The following property determines which actions are performed when
 # processing the auto-deploy directory. It is a comma-delimited list of
